--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,11 @@
-* { margin: 0; padding: 0;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
-html, body {
-  height:100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
